@@ -626,7 +626,7 @@ public:
 		}
 					// Create an instance.
 	Monster_actor *create(int chunkx, int chunky, int tilex, int tiley, 
-								int lift);
+					int lift, int sched = -1);
 	};
 
 #endif
